// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Snap render Input -- props border 1`] = `
<div
  class="at-input at-input--without-border"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props clear 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="text"
    />
    
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props disabled 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container at-input--disabled"
  >
    <div
      class="at-input__overlay"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props editable 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container at-input--disabled"
  >
    <div
      class="at-input__overlay"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props error 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container at-input--error"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="text"
    />
    <!---->
    <div
      class="at-input__icon"
    >
      <div
        class="at-icon at-icon-alert-circle at-input__icon-alert"
      />
    </div>
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props maxLength 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props name 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props placeholder 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder="placeholder"
      type="text"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props required 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <label
      class="at-input__title at-input__title--required"
      for=""
    >
      name
    </label>
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props style 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props title 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <label
      class="at-input__title"
      for=""
    >
      title
    </label>
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props type(digit) 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="digit"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props type(idcard) 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="idcard"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props type(number) 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="number"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props type(password) 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props type(phone) 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="number"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render Input -- props value 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;

exports[`Input Snap render initial Input 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    
    <input
      class="at-input__input"
      id="name"
      name="name"
      placeholder=""
      type="text"
    />
    <!---->
    <!---->
    <div
      class="at-input__children"
    >
      
      
    </div>
  </div>
</div>
`;
